--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="game-area">
         <div id="controls-area">
-            <button data-type="adition" class="btn btn--big btn--green">
+            <button data-type="addition" class="btn btn--big btn--green">
                 <i class="fas fa-plus"></i>
             </button>
             <button data-type="subtract" class="btn btn--big btn--blue">
