--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Love Maths!</title>
     <h1 class="heading">
         <img class="logo" src="assets/images/logo.png" alt="logo">Love Maths
     </h1>
